--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "start": "^5.1.0",
+    "sweetalert2": "^11.12.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
