--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 REACT_APP_BASE_URL=http://localhost:4000/api/v1
 RAZORPAY_KEY = rzp_test_nFATabXfPuTHNG
 RAZORPAY_SECRET = 7XKv2N9orqEgEPJCdYieV9zb
+
+REACT_ALGOLIA_APP_ID=5OF9VIASPI
+REACT_SEARCH_KEY=07dcc7c834f21d729c05c70189250922
