--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
+    "fuse.js": "^7.0.0",
     "instantsearch.css": "^8.4.0",
+    "lunr": "^2.3.9",
     "primereact": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-instantsearch": "^7.12.4",
+    "react-lunr": "^1.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
