--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 REACT_APP_BASE_URL=http://localhost:4000/api/v1
-
-RAZORPAY_KEY = rzp_test_nFATabXfPuTHNG
-RAZORPAY_SECRET = 7XKv2N9orqEgEPJCdYieV9zb
-
+REACT_APP_RAZORPAY_KEY=rzp_test_nFATabXfPuTHNG
+REACT_APP_RAZORPAY_SECRET=7XKv2N9orqEgEPJCdYieV9zb
 REACT_ALGOLIA_APP_ID=BOY7KEYJ5O
 REACT_SEARCH_KEY=495325d42c91dfd227a8d93ba5f48752
