--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sonner": "^1.5.0",
     "start": "^5.1.0",
     "sweetalert2": "^11.12.3",
     "web-vitals": "^2.1.4"
