--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.3.24",
     "fuse.js": "^7.0.0",
     "instantsearch.css": "^8.4.0",
+    "lucide-react": "^0.441.0",
     "lunr": "^2.3.9",
     "primereact": "^10.7.0",
     "react": "^18.2.0",
