--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "algoliasearch": "^4.24.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.4",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
@@ -25,11 +26,12 @@
     "lunr": "^2.3.9",
     "primereact": "^10.7.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-instantsearch": "^7.12.4",
     "react-lunr": "^1.1.0",
     "react-phone-input-2": "^2.15.1",
