--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-instantsearch": "^7.12.4",
+    "react-loader-spinner": "^6.1.6",
     "react-lunr": "^1.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
