--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mantine/form": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@material-tailwind/react": "^2.1.10",
+    "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.53.2",
