--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.441.0",
     "lunr": "^2.3.9",
     "primereact": "^10.7.0",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -41,6 +42,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-lunr": "^1.1.0",
     "react-phone-input-2": "^2.15.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
