--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "algoliasearch": "^4.24.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.4",
+    "cloudinary-react": "^1.8.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
