--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mantine/core": "^7.11.2",
     "@mantine/dropzone": "^7.11.2",
     "@mantine/form": "^7.11.2",
