--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "algoliasearch": "^4.24.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.4",
     "cloudinary-react": "^1.8.1",
     "concurrently": "^8.2.2",
@@ -31,6 +31,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.441.0",
     "lunr": "^2.3.9",
+    "node-cron": "^3.0.3",
     "primereact": "^10.7.0",
     "quill": "^2.0.2",
     "quill-image-resize-module-react": "^3.0.0",
@@ -62,6 +63,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "cd server && npm run dev",
+    "prebuild": "node fetch-sitemap.js",
     "dev": "concurrently -n \"client,server\" -c \"bgBlue,bgYellow\" \"npm start\" \"npm run server\""
   },
   "eslintConfig": {
