--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-gtm-module": "^2.0.11",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
